# simple-memory-arena

./: .gitignore  CMakeLists.txt  Makefile  README.md  arena.gpr
ada/: arenas.ads  main.adb
cmake/: UseCcache.cmake
cpp/: bench.cpp  main.cpp
src_ada/: arenas.adb  arenas.ads  main.adb
src_cpp/: arena.hpp  bench.cpp  main.cpp
